olivia first heading

--- a/website/templates/first_heading.html
+++ b/website/templates/first_heading.html
@@ -1,2 +1,14 @@
-<!-- your html code here -->
-<p>Hello, I'm the first_heading.html</p>
+<div class="container">
+    <div class="row">
+        <div class="col">
+            <h4>
+           The Firts Heading <span>Will Catch Your Eye</span>
+            </h4>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores eius mollitia porro facere facilis quisquam pariatur in iste laboriosam nisi. Minima, ad debitis!
+            </p>
+        </div>
+        <div class="col">
+         <img src="https://www.nombresdeperros.eu/wp-content/uploads/2021/11/lulu-de-pomerania-blanco.jpg" class="rounded-circle imgsize"alt="...">
+        </div>
+    </div>
+</div>
